tests/errors/ternary_to_null_coalescing.php
<?php

declare(strict_types=1);

$b = 12;
$a = isset($a) ? $a : $b;
